PivotGrid: Fix text wrapping after expand icon after latest chrome update (T845487) (#11567)

--- a/styles/widgets/common/pivotGrid.less
+++ b/styles/widgets/common/pivotGrid.less
@@ -175,6 +175,7 @@
 
             > span {
                 white-space: normal;
+                display: inline-flex;
             }
         }
     }
